"""Initial migration

Revision ID: 211bbb03a0a5
Revises: 
Create Date: 2026-04-15 16:32:00.393196

"""
from alembic import op
import sqlalchemy as sa


# revision identifiers, used by Alembic.
revision = '211bbb03a0a5'
down_revision = None
branch_labels = None
depends_on = None


def upgrade():
    # ### commands auto generated by Alembic - please adjust! ###
    op.create_table('audit_logs',
    sa.Column('id', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('user_id', sa.Integer(), nullable=True, comment='操作人ID(可为空,如系统自动任务)'),
    sa.Column('username_snapshot', sa.String(length=50), nullable=True, comment='用户名快照'),
    sa.Column('action', sa.String(length=50), nullable=False, comment='动作(如:DELETE_SERVER)'),
    sa.Column('target', sa.String(length=100), nullable=True, comment='操作对象(如:server_id=5)'),
    sa.Column('details', sa.Text(), nullable=True, comment='详细信息/JSON'),
    sa.Column('client_ip', sa.String(length=45), nullable=True, comment='操作来源IP'),
    sa.Column('created_at', sa.DateTime(), nullable=True, comment='记录时间'),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_table('server_groups',
    sa.Column('id', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('name', sa.String(length=50), nullable=False, comment='分组名称(如:后端组,大数据组)'),
    sa.Column('description', sa.String(length=200), nullable=True, comment='分组描述'),
    sa.Column('created_at', sa.DateTime(), nullable=True, comment='创建时间'),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('name')
    )
    op.create_table('users',
    sa.Column('id', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('username', sa.String(length=50), nullable=False, comment='用户名'),
    sa.Column('password', sa.String(length=255), nullable=False, comment='密码'),
    sa.Column('email', sa.String(length=100), nullable=False, comment='告警邮箱'),
    sa.Column('role', sa.Enum('admin', 'user'), nullable=False, comment='用户角色：管理员/普通用户'),
    sa.Column('created_at', sa.DateTime(), nullable=True, comment='创建时间'),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('username')
    )
    op.create_table('servers',
    sa.Column('id', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('group_id', sa.Integer(), nullable=True, comment='所属分组ID'),
    sa.Column('server_name', sa.String(length=100), nullable=False, comment='服务器名称'),
    sa.Column('ip_address', sa.String(length=45), nullable=False, comment='IP地址'),
    sa.Column('port', sa.Integer(), nullable=True, comment='SSH端口，默认22'),
    sa.Column('description', sa.String(length=200), nullable=True, comment='服务器描述/用途备注'),
    sa.Column('created_at', sa.DateTime(), nullable=True, comment='创建时间'),
    sa.ForeignKeyConstraint(['group_id'], ['server_groups.id'], ),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('ip_address')
    )
    op.create_table('alert_history',
    sa.Column('id', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('server_id', sa.Integer(), nullable=False, comment='关联服务器'),
    sa.Column('metric_type', sa.String(length=20), nullable=False, comment='告警指标'),
    sa.Column('current_value', sa.DECIMAL(precision=5, scale=2), nullable=False, comment='当时数值'),
    sa.Column('threshold_snapshot', sa.DECIMAL(precision=5, scale=2), nullable=True, comment='当时阈值快照'),
    sa.Column('alert_content', sa.Text(), nullable=True, comment='告警邮件内容'),
    sa.Column('status', sa.Enum('firing', 'resolved', 'ignored'), nullable=True, comment='状态'),
    sa.Column('triggered_at', sa.DateTime(), nullable=True, comment='触发时间'),
    sa.Column('resolved_at', sa.DateTime(), nullable=True, comment='恢复时间'),
    sa.ForeignKeyConstraint(['server_id'], ['servers.id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_table('alert_rules',
    sa.Column('id', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('server_id', sa.Integer(), nullable=False, comment='关联服务器'),
    sa.Column('metric_type', sa.Enum('cpu', 'memory', 'disk'), nullable=False, comment='指标类型'),
    sa.Column('threshold', sa.DECIMAL(precision=5, scale=2), nullable=False, comment='触发阈值(%)'),
    sa.Column('silence_minutes', sa.Integer(), nullable=True, comment='静默时间(分钟)避免频繁轰炸'),
    sa.Column('is_enabled', sa.Boolean(), nullable=True, comment='是否启用'),
    sa.Column('created_at', sa.DateTime(), nullable=True, comment='创建时间'),
    sa.Column('updated_at', sa.DateTime(), nullable=True, comment='更新时间'),
    sa.ForeignKeyConstraint(['server_id'], ['servers.id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_table('dify_decisions',
    sa.Column('id', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('server_id', sa.Integer(), nullable=False, comment='关联服务器ID'),
    sa.Column('workflow_id', sa.String(length=100), nullable=True, comment='Dify工作流ID'),
    sa.Column('workflow_run_id', sa.String(length=100), nullable=True, comment='Dify工作流运行ID'),
    sa.Column('input_data', sa.JSON(), nullable=True, comment='发送给Dify的完整输入数据'),
    sa.Column('current_metrics', sa.JSON(), nullable=True, comment='当前指标快照'),
    sa.Column('history_trend', sa.JSON(), nullable=True, comment='历史趋势数据'),
    sa.Column('should_alert', sa.Boolean(), nullable=True, comment='是否需要告警'),
    sa.Column('alert_level', sa.Enum('info', 'warning', 'critical', 'emergency'), nullable=True, comment='告警级别'),
    sa.Column('alert_reason', sa.Text(), nullable=True, comment='告警原因说明'),
    sa.Column('decision_output', sa.JSON(), nullable=True, comment='Dify返回的完整决策结果'),
    sa.Column('recommendation', sa.Text(), nullable=True, comment='处理建议'),
    sa.Column('action_items', sa.JSON(), nullable=True, comment='建议执行的操作列表'),
    sa.Column('executed', sa.Boolean(), nullable=True, comment='是否已执行'),
    sa.Column('execution_result', sa.Text(), nullable=True, comment='执行结果'),
    sa.Column('human_feedback', sa.Enum('correct', 'wrong', 'neutral'), nullable=True, comment='人工反馈: 正确/错误/中性'),
    sa.Column('feedback_comment', sa.Text(), nullable=True, comment='反馈备注'),
    sa.Column('created_at', sa.DateTime(), nullable=True, comment='创建时间'),
    sa.Column('executed_at', sa.DateTime(), nullable=True, comment='执行时间'),
    sa.Column('feedback_at', sa.DateTime(), nullable=True, comment='反馈时间'),
    sa.ForeignKeyConstraint(['server_id'], ['servers.id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    with op.batch_alter_table('dify_decisions', schema=None) as batch_op:
        batch_op.create_index(batch_op.f('ix_dify_decisions_created_at'), ['created_at'], unique=False)

    op.create_table('monitor_data',
    sa.Column('id', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('server_id', sa.Integer(), nullable=False, comment='关联的服务器ID'),
    sa.Column('ip_address', sa.String(length=45), nullable=False, comment='服务器IP地址'),
    sa.Column('cpu_value', sa.DECIMAL(precision=5, scale=2), nullable=False, comment='CPU使用率，保留2位小数'),
    sa.Column('memory_value', sa.DECIMAL(precision=5, scale=2), nullable=False, comment='内存使用率，保留2位小数'),
    sa.Column('disk_value', sa.DECIMAL(precision=5, scale=2), nullable=False, comment='磁盘使用率，保留2位小数'),
    sa.Column('recorded_at', sa.DateTime(), nullable=True, comment='数据记录时间'),
    sa.ForeignKeyConstraint(['server_id'], ['servers.id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    with op.batch_alter_table('monitor_data', schema=None) as batch_op:
        batch_op.create_index(batch_op.f('ix_monitor_data_recorded_at'), ['recorded_at'], unique=False)

    op.create_table('server_users',
    sa.Column('server_id', sa.Integer(), nullable=False, comment='服务器ID'),
    sa.Column('user_id', sa.Integer(), nullable=False, comment='用户ID'),
    sa.Column('created_at', sa.DateTime(), nullable=True, comment='关联创建时间'),
    sa.ForeignKeyConstraint(['server_id'], ['servers.id'], ),
    sa.ForeignKeyConstraint(['user_id'], ['users.id'], ),
    sa.PrimaryKeyConstraint('server_id', 'user_id')
    )
    op.create_table('smart_alert_rules',
    sa.Column('id', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('server_id', sa.Integer(), nullable=False, comment='关联服务器ID'),
    sa.Column('rule_name', sa.String(length=100), nullable=False, comment='规则名称'),
    sa.Column('rule_description', sa.Text(), nullable=True, comment='规则描述'),
    sa.Column('dify_workflow_id', sa.String(length=100), nullable=True, comment='绑定的Dify工作流ID'),
    sa.Column('dify_api_key', sa.String(length=200), nullable=True, comment='Dify API Key (可选，单独配置)'),
    sa.Column('trigger_condition', sa.JSON(), nullable=True, comment='前置触发条件'),
    sa.Column('is_enabled', sa.Boolean(), nullable=True, comment='是否启用'),
    sa.Column('priority', sa.Integer(), nullable=True, comment='优先级，数字越大优先级越高'),
    sa.Column('silent_minutes', sa.Integer(), nullable=True, comment='告警静默期(分钟)'),
    sa.Column('created_at', sa.DateTime(), nullable=True, comment='创建时间'),
    sa.Column('updated_at', sa.DateTime(), nullable=True, comment='更新时间'),
    sa.ForeignKeyConstraint(['server_id'], ['servers.id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    # ### end Alembic commands ###


def downgrade():
    # ### commands auto generated by Alembic - please adjust! ###
    op.drop_table('smart_alert_rules')
    op.drop_table('server_users')
    with op.batch_alter_table('monitor_data', schema=None) as batch_op:
        batch_op.drop_index(batch_op.f('ix_monitor_data_recorded_at'))

    op.drop_table('monitor_data')
    with op.batch_alter_table('dify_decisions', schema=None) as batch_op:
        batch_op.drop_index(batch_op.f('ix_dify_decisions_created_at'))

    op.drop_table('dify_decisions')
    op.drop_table('alert_rules')
    op.drop_table('alert_history')
    op.drop_table('servers')
    op.drop_table('users')
    op.drop_table('server_groups')
    op.drop_table('audit_logs')
    # ### end Alembic commands ###
